# video-note

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  QWEN.md  README.md  main.spec  main_cli.py  pyproject.toml
assets/: __init__.py  icon.icns  reference_ui_widget_code.py
devboost/: main.py
video_note/: main.py
