[project]
name = "devboost"
version = "0.0.1"
description = "Tools to boost developer productivity and improve workflows"
authors = [{ name = "Namuan", email = "namuan@deskriders.dev" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faker",
    "jsonpath-ng",
    "markdown",
    "pyqt6",
    "pyyaml",
    "appdirs",
    "Pillow",
    "requests",
]

[project.urls]
Homepage = "https://namuan.github.io/dev-boost/"
Repository = "https://github.com/namuan/dev-boost"
Documentation = "https://namuan.github.io/dev-boost/"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pre-commit",
    "tox-uv",
    "ruff",
    "pyinstaller",
    "vulture",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["devboost"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    "G",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # Use pathlib instead of os.path
    "PTH",
    # Use common import conventions
    "ICN",
    # Good return practices
    "RET",
    # Some good import practices
    "TID",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[project.scripts]
devboost = "devboost:main"
