[project]
name = "video-note"
version = "0.0.1"
description = "A video annotation tool for taking notes on video content"
authors = [{ name = "Namuan", email = "namuan@deskriders.dev" }]
readme = "README.md"
keywords = ['python', 'video', 'notes', 'annotation']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyQt6",
]

[project.urls]
Homepage = "https://namuan.github.io/video-note/"
Repository = "https://github.com/namuan/video-note"
Documentation = "https://namuan.github.io/video-note/"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pre-commit",
    "tox-uv",
    "ruff",
    "pyinstaller",
    "radon",
    "xenon",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["video_note"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
    "E741",
    "D",
    "N802",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[project.scripts]
video-note = "video_note.main:main"
